# amptec-scraper

./: .replit  LICENSE  README.md  pyproject.toml  requirements.txt
config/: scraper.config.json
scripts/: run_scrape.sh
src/amptec_scraper/: __main__.py  agent_instructions.json  crawl.py  main.py
