[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amptec-scraper"
version = "0.1.0"
description = "Scrape product metadata and images from amptec.com"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx==0.27.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    "tqdm==4.66.4",
    "tenacity==8.2.3",
    "python-slugify==8.0.4",
    "readability-lxml==0.8.1",
]

[project.scripts]
amptec-scraper = "amptec_scraper.main:cli"
